fixed alignment issues on footer

--- a/assets/stylesheets/queries.scss
+++ b/assets/stylesheets/queries.scss
@@ -92,7 +92,7 @@ $briefPhoneBreakPoint: 600px;
             display: flex !important;
             flex-basis: 50%;
             position: relative;
-            bottom: -19% !important;
+            bottom: -22% !important;
         }
     }
 }
